--- a/FlappyBird/demo.html
+++ b/FlappyBird/demo.html
@@ -20,7 +20,10 @@
 
 <body>
   <canvas width="360px" height="520px" id="myCanvas"></canvas>
-  <script src="https://cdn.bootcss.com/lodash.js/4.17.12-pre/lodash.core.min.js"></script>
+  <script src="https://cdn.bootcss.com/lodash.js/4.17.12-pre/lodash.min.js"></script>
+  <script src="./js/Actor.js"></script>
+  <script src="./js/Background.js"></script>
+  <script src="./js/Land.js"></script>
   <script src="./js/Game.js"></script>
   <script>
     var game = new Game("myCanvas");
