--- a/FlappyBird/demo.html
+++ b/FlappyBird/demo.html
@@ -24,6 +24,7 @@
   <script src="./js/Actor.js"></script>
   <script src="./js/Background.js"></script>
   <script src="./js/Land.js"></script>
+  <script src="./js/Pipe.js"></script>
   <script src="./js/Game.js"></script>
   <script>
     var game = new Game("myCanvas");
