--- a/FlappyBird/demo.html
+++ b/FlappyBird/demo.html
@@ -25,6 +25,7 @@
   <script src="./js/Background.js"></script>
   <script src="./js/Land.js"></script>
   <script src="./js/Pipe.js"></script>
+  <script src="./js/Bird.js"></script>
   <script src="./js/Game.js"></script>
   <script>
     var game = new Game("myCanvas");
