场景管理器

--- a/FlappyBird/demo.html
+++ b/FlappyBird/demo.html
@@ -27,9 +27,11 @@
   <script src="./js/Pipe.js"></script>
   <script src="./js/Bird.js"></script>
   <script src="./js/Game.js"></script>
+  <script src="./js/SceneManager.js"></script>
   <script>
     var game = new Game("myCanvas");
   </script>
+  
 </body>
 
 </html>
